- Implemented a UserPreferenceService and re-activated the star-selection logic.

--- a/core/src/main/flex/DukeConContext.mxml
+++ b/core/src/main/flex/DukeConContext.mxml
@@ -14,7 +14,7 @@
         <!-- Service for accessing image resources -->
         <services:ResourceService/>
         <services:LanguageService/>
-
+        <services:UserPreferenceService/>
         <services:EventService/>
         <services:LocationService/>
         <services:SpeakerService/>
