--- a/core/src/main/flex/org/dukecon/views/ScheduleDayView.mxml
+++ b/core/src/main/flex/org/dukecon/views/ScheduleDayView.mxml
@@ -13,6 +13,7 @@
         <parsley:FastInject injectionComplete="init()">
             <parsley:Inject property="eventService" type="{EventService}" />
             <parsley:Inject property="resourceService" type="{ResourceService}" />
+            <parsley:Inject property="userPreferenceService" type="{UserPreferenceService}" />
         </parsley:FastInject>
         <s:DateTimeFormatter id="formatter"
                              dateTimePattern="{resourceManager.getString('dukecon', 'dateTime.date')}"/>
@@ -32,6 +33,7 @@
         import org.dukecon.model.Event;
         import org.dukecon.services.EventService;
         import org.dukecon.services.ResourceService;
+        import org.dukecon.services.UserPreferenceService;
         import org.dukecon.utils.EventItemFactory;
 
         [Bindable]
@@ -55,6 +57,7 @@
 
         public var eventService:EventService;
         public var resourceService:ResourceService;
+        public var userPreferenceService:UserPreferenceService;
 
         protected function onCreationComplete(event:FlexEvent):void {
             grid.addEventListener(ListEvent.ITEM_SELECTED, onTalkSelected);
@@ -136,7 +139,7 @@
         }
 
         private function itemRenderer(event:org.dukecon.model.Event):IFactory {
-            return new EventItemFactory(dayStart, locations.getItemIndex(event.location), resourceService);
+            return new EventItemFactory(dayStart, locations.getItemIndex(event.location), resourceService, userPreferenceService);
         }
 
         protected function onTalkSelected(event:ListEvent):void {
