--- a/core/src/main/flex/org/dukecon/views/LocationsView.mxml
+++ b/core/src/main/flex/org/dukecon/views/LocationsView.mxml
@@ -34,13 +34,13 @@
         public var settingsService:SettingsService;
 
         public function init():void {
-            listData = locationService.locations;
+            listData = locationService.getLocations(SettingsService.selectedConferenceId);
             list.addEventListener(ListEvent.ITEM_SELECTED, onLocationSelected)
         }
 
         [MessageHandler]
         public function onConferenceDataChanged(event:ConferenceDataChangedEvent):void {
-            listData = locationService.locations;
+            listData = locationService.getLocations(SettingsService.selectedConferenceId);
         }
 
         protected function onLocationSelected(event:ListEvent):void {
